Agregando estilos y clase a un div

--- a/estilos.css
+++ b/estilos.css
@@ -1,2 +1,11 @@
 /* Agrega tus estilos aquí */
 /* Debes crear una clase llamada mi-div */
+div.mi-div {
+    width: 300px;
+    height: 200px;
+    background-color: lightblue;
+    border: 10px solid blue;
+    padding: 20px;
+    margin: 30px;
+
+}
